# Standard-SystemC-Generic-Template

./: .gitignore  CMakeLists.txt  README.MD  generate.sh
include/: Consumer.h  Producer.h
src/: main.cpp
